--- a/src/app/components/widget-call/widget-call.component.html
+++ b/src/app/components/widget-call/widget-call.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="isCall" class="widget">
-    <div *ngIf="client$ | async as client" class="client-data">
-		<p>{{ client.name }}</p>
-		<p>{{ client.phone }}</p>
-    </div>
     <app-loader *ngIf="delayNumber"></app-loader>
-    <div *ngIf="isConnected" class="success-block">
+    <div *ngIf="isConnected" class="connect-block">
+        <div *ngIf="client$ | async as client" class="client-data">
+            <p>{{ client.name }}</p>
+            <p>{{ client.phone }}</p>
+        </div>
         <app-timer></app-timer>
-        <button class="button-mic" mat-icon-button>
-            <mat-icon aria-hidden="false">mic</mat-icon>
+         <button (click)="toggleMic()" mat-icon-button>
+            <mat-icon aria-hidden="false">{{ icon ? 'mic' : 'mic_off' }}</mat-icon>
         </button>
         <button (click)="endCall()" class="button-call" mat-icon-button>
             <mat-icon aria-hidden="false">call_end</mat-icon>
