--- a/src/app/components/button-call/button-call.component.html
+++ b/src/app/components/button-call/button-call.component.html
@@ -1,3 +1,3 @@
-<button (click)="startCall()" class="button-call" mat-icon-button>
+<button  class="button-call" mat-icon-button>
     <mat-icon aria-hidden="false">call</mat-icon>
 </button>
