--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -10,7 +10,7 @@
                 </mat-panel-description>
                 <mat-form-field>
                     <input matInput value="{{ step.phone }}" readonly /><app-phone-number
-                        [data]="step.phone"
+                        [data]="step"
                     ></app-phone-number>
                 </mat-form-field>
             </mat-expansion-panel>
