--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -2,7 +2,7 @@
     <mat-form-field class="input-full-width input ">
         <mat-label>Номер телефона</mat-label>
         <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
-        <app-phone-number [data]="contact.phone"></app-phone-number>
+        <app-phone-number [data]="contact"></app-phone-number>
     </mat-form-field>
     <mat-form-field class="input-full-width input ">
         <mat-label>ФИО Контакта</mat-label>
