--- a/src/app/components/client-data/client-data.component.scss
+++ b/src/app/components/client-data/client-data.component.scss
@@ -1,6 +1,7 @@
 .wrapper {
     margin-left: 200px;
     padding-left: 100px;
+    padding-top: 60px;
     font-family: sans-serif;
     color: rgb(228, 221, 208);
     background-color: rgb(63, 61, 61);
