--- a/src/app/components/button-call/button-call.component.scss
+++ b/src/app/components/button-call/button-call.component.scss
@@ -1,10 +1,9 @@
 .button-call {
-    width: 47px;
+    width: 50px;
     height: 65px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 0;
+    border-radius: 0 4px 4px 0;
     background-color: rgb(195, 226, 238);
 }
-
