--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -1,12 +1,5 @@
 <form [formGroup]="clientContactsForm" class="contacts-form">
-    <div class="phone-field">
-        <mat-form-field class="input-full-width input phone">
-            <mat-label>Номер телефона</mat-label>
-            <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
-        </mat-form-field>
-        <app-button-call (click)="startCall()"></app-button-call>
-    </div>
-
+   <app-phone-field [phone]="contact.phone" (click)="startCall()"></app-phone-field>
     <mat-form-field class="input-full-width input ">
         <mat-label>ФИО Контакта</mat-label>
         <input [formControlName]="contactsFormControlEnum.CLIENT_NAME" matInput />
