--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,5 +1,4 @@
 <div class="progress-loader">
-<p>Идет набор номера...</p>
-    <mat-progress-spinner class="loader" mode="indeterminate" diameter="20">
-    </mat-progress-spinner>
+    <p>{{ message }}</p>
+    <mat-progress-spinner class="loader" mode="indeterminate" diameter="20"> </mat-progress-spinner>
 </div>
