--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar class="toolbar-wrapper" color="primary">
     <app-logo></app-logo>
+    <app-phone-widget></app-phone-widget>
     <app-user></app-user>
 </mat-toolbar>
