--- a/src/app/components/button-call/button-call.component.scss
+++ b/src/app/components/button-call/button-call.component.scss
@@ -5,3 +5,13 @@ mat-icon {
 mat-icon:hover {
     opacity: 0.6;
 }
+
+.button-call {
+    width: 50px;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 4px 4px 0;
+    background-color: rgb(195, 226, 238);
+}
