--- a/src/app/components/phone-field/phone-field.component.html
+++ b/src/app/components/phone-field/phone-field.component.html
@@ -3,5 +3,5 @@
         <mat-label>Номер телефона</mat-label>
         <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
     </mat-form-field>
-    <app-button-call></app-button-call>
+    <app-button-call [data]="contact"></app-button-call>
 </div>
