--- a/src/app/components/phone-widget/phone-widget.component.html
+++ b/src/app/components/phone-widget/phone-widget.component.html
@@ -1,23 +1,25 @@
 <div *ngIf="isCall" class="widget-blocks">
-    <div *ngIf="isDelay" class="progress-loader">
-        <p>Идет набор номера...</p>
+    <div *ngIf="isConnecting" class="progress-loader">
+        <p>{{ widgetSettings.connectingMessage }}</p>
         <mat-progress-spinner class="loader" mode="indeterminate" diameter="20"> </mat-progress-spinner>
     </div>
-    <div *ngIf="isConnected; else errorCall" class="connect-block">
-        <div *ngIf="nameAndPhone$ | async as data" class="client-data">
-            <p>{{ data.name }}</p>
-            <pre>{{ data.phone }}</pre>
+    <ng-container *ngIf="!isConnecting">
+        <div *ngIf="isConnected; else errorConnect" class="connect-block">
+            <div *ngIf="nameAndPhone$ | async as data" class="client-data">
+                <p>{{ data.name }}</p>
+                <pre>{{ data.phone }}</pre>
+            </div>
+            <app-timer [count]="widgetSettings.timerCount"></app-timer>
+            <mat-icon (click)="toggleMic()" aria-hidden="true">{{ micIcon ? 'mic' : 'mic_off' }}</mat-icon>
+            <button (click)="endCall()" class="button-call" mat-icon-button>
+                <mat-icon aria-hidden="false">call_end</mat-icon>
+            </button>
         </div>
-        <app-timer></app-timer>
-        <mat-icon (click)="toggleMic()" aria-hidden="true">{{ micIcon ? 'mic' : 'mic_off' }}</mat-icon>
-        <button (click)="endCall()" class="button-call" mat-icon-button>
-            <mat-icon aria-hidden="false">call_end</mat-icon>
-        </button>
-    </div>
-    <ng-template #errorCall class="error-block">
-        <p>Ошибка соеденения...</p>
-        <button (click)="endCall()" class="button-call" mat-icon-button>
-            <mat-icon aria-hidden="false">call_end</mat-icon>
-        </button>
-    </ng-template>
+        <ng-template #errorConnect class="error-block">
+            <p>{{ widgetSettings.errorMessage }}</p>
+            <button (click)="endCall()" class="button-call" mat-icon-button>
+                <mat-icon aria-hidden="false">call_end</mat-icon>
+            </button>
+        </ng-template>
+    </ng-container>
 </div>
