--- a/src/app/components/timer/timer.component.html
+++ b/src/app/components/timer/timer.component.html
@@ -2,5 +2,5 @@
     <p [class.stop-time]="isTimerStoped" class="image-clock">
         <mat-icon aria-hidden="false">access_alarm</mat-icon>
     </p>
-    <p [class.stop-time]="isTimerStoped" class="time">00:{{ this.count | timer }}</p>
+    <p [class.stop-time]="isTimerStoped" class="time">00:{{ count | timer }}</p>
 </div>
