--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,7 @@ body {
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+.mat-drawer-inner-container {
+    height: 80% !important;
+}
