--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -1,19 +1,33 @@
-<div *ngIf="client$ | async as client" class="client-data">
-    <div class="session-data grey">
-        <span class="time-data">{{ time | date: 'hh:mm a' }}</span>
-        <span class="session-id">{{ client.customerId }}</span>
-        <span class="date-data">{{ client.createdAt | date: 'dd.MM.yy' }}</span>
-    </div>
-    <div class="client-detail">
-        <div class="client-name">
-            <span>{{ client.firstName }}</span>
-            <span>{{ client.lastName }}</span>
+<div class="wrapper">
+    <div *ngIf="client$ | async as client" class="client-data">
+        <div class="session-data grey">
+            <span class="time-data">{{ time | date: 'hh:mm a' }}</span>
+            <span class="session-id">{{ client.customerId }}</span>
+            <span class="date-data">{{ client.createdAt | date: 'dd.MM.yy' }}</span>
         </div>
-        <span class="client-age grey">{{ client.age | ageData }}</span>
-        <div class="client-adress grey">{{ client.address }}</div>
-        <div class="client-status">{{ client.city }}</div>
+        <div class="client-detail">
+            <div class="client-name">
+                <span>{{ client.firstName }}</span>
+                <span>{{ client.lastName }}</span>
+            </div>
+            <span class="client-age grey">{{ client.age | ageData }}</span>
+            <div class="client-address grey">{{ client.address }}</div>
+            <div class="client-status">{{ client.city }}</div>
+        </div>
+        <div>
+            <img src="{{ client.avatar }}" class="client-image" alt="" />
+        </div>
     </div>
-    <div>
-        <img src="{{ client.avatar }}" class="client-image" />
+    <div *ngIf="clientDetail$ | async as clientDetail" class="client-activity-data">
+        <div class="client-activity-detail">
+            <p>{{ clientDetail.position }}</p>
+            <p>{{ clientDetail.occupation }}</p>
+        </div>
+        <div class="client-activity-detail">
+            <p>
+                <a [href]="clientDetail.site" target="_blank">{{ clientDetail.site }}</a>
+            </p>
+            <p>{{ clientDetail.income | currency: 'RUB':'symbol-narrow' }}</p>
+        </div>
     </div>
 </div>
