--- a/src/app/components/client/client.component.scss
+++ b/src/app/components/client/client.component.scss
@@ -1,11 +1,8 @@
 .wrapper {
-    padding-top: 60px;
-    margin-left: 200px;
-    padding-left: 100px;
-    height: 170px;
-    background-color: rgb(63, 61, 61);
+    padding-top: 64px;
     font-family: sans-serif;
     color: rgb(228, 221, 208);
+    background-color: rgb(63, 61, 61);
 }
 
 .session-data {
@@ -21,8 +18,17 @@
     max-width: 1000px;
     width: 100%;
     position: relative;
-    margin: 0 auto;
+    margin: auto;
     padding-top: 20px;
+}
+
+.client-activity-data {
+    max-width: 1000px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    padding: 10px 0 10px;
+    margin: auto;
 }
 
 .client-detail {
@@ -31,6 +37,19 @@
     flex-wrap: wrap;
     width: 550px;
     margin-bottom: 10px;
+}
+
+.client-activity-detail {
+    width: 200px;
+
+    :first-child {
+        color: rgb(168, 168, 167);
+        font-size: 15px;
+    }
+
+    :nth-child(2n) {
+        font-size: 14px;
+    }
 }
 
 .client-name {
@@ -63,4 +82,13 @@
 
 .grey {
     color: rgb(168, 168, 167);
+}
+
+p {
+    margin: 0;
+    padding-bottom: 10px;
+
+    :first-child {
+        text-decoration: none;
+    }
 }
