--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -33,23 +33,11 @@
     font-size: 14px;
 }
 
-.mat-card {
-    box-shadow: 0 0 0 0;
-    background: white;
-}
-
 mat-card-content {
     word-break: break-all;
     font-style: italic;
 }
 
-mat-sidenav {
-    position: relative;
-    padding-top: 54px;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    float: right;
-    right: 0;
-    width: 350px;
+mat-card {
+    border: 1px solid rgb(238, 238, 238);
 }
