--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -1,29 +1,14 @@
 .side-button {
     position: fixed;
-    bottom: 50px;
-    left: 40px;
+    bottom: 25px;
+    left: 55px;
+}
+.list-item {
+    height: calc(100vh - 180px);
 }
 
-mat-sidenav-content {
-    display: flex;
-    flex-direction: column;
-}
-
-mat-sidenav-container {
-    margin-top: 60px;
-    position: fixed;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    float: left;
-    left: 0;
-    height: 75%;
-    width: 250px;
-    background-color: white;
-    box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.3);
-
-    ::ng-deep .mat-form-field-infix {
-        display: flex;
-    }
+.mat-raised-button {
+    height: 60px;
+    width: 240px;
+    font-size: 20px;
 }
