--- a/src/app/pages/main-page/main-layout/main-layout.component.html
+++ b/src/app/pages/main-page/main-layout/main-layout.component.html
@@ -1,5 +1,17 @@
 <app-toolbar></app-toolbar>
-<app-side-bar></app-side-bar>
-<app-client-data></app-client-data>
-<app-client-detail></app-client-detail>
-<app-comment></app-comment>
+<mat-drawer-container>
+    <mat-drawer mode="side" class="left-list" opened>
+        <app-side-bar></app-side-bar>
+    </mat-drawer>
+    <mat-drawer-content>
+        <app-client></app-client>
+        <mat-drawer-container>
+            <mat-drawer-content class="tabs">
+                <app-client-detail></app-client-detail>
+            </mat-drawer-content>
+            <mat-drawer mode="side" class="right-list comment-block" opened>
+                <app-comment></app-comment>
+            </mat-drawer>
+        </mat-drawer-container>
+    </mat-drawer-content>
+</mat-drawer-container>
