--- a/src/app/components/client/client.component.scss
+++ b/src/app/components/client/client.component.scss
@@ -1,11 +1,17 @@
-.wrapper {
-    padding-top: 60px;
-    margin-left: 200px;
-    padding-left: 100px;
+.container {
+    padding: 60px 100px 20px 100px;
     height: 170px;
     background-color: rgb(63, 61, 61);
     font-family: sans-serif;
-    color: rgb(228, 221, 208);
+    color: rgb(168, 168, 167);
+}
+
+.client-data {
+    max-width: 1000px;
+    width: 100%;
+    position: relative;
+    margin: 0 auto;
+    padding-top: 20px;
 }
 
 .session-data {
@@ -17,19 +23,11 @@
     font-weight: bold;
 }
 
-.client-data {
-    max-width: 1000px;
-    width: 100%;
-    position: relative;
-    margin: 0 auto;
-    padding-top: 20px;
-}
-
 .client-detail {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 550px;
+    width: 460px;
     margin-bottom: 10px;
 }
 
@@ -37,6 +35,7 @@
     width: 600px;
     margin-bottom: 10px;
     font-size: 20px;
+    color: rgb(228, 221, 208);
     text-transform: uppercase;
 
     span:last-child {
@@ -44,23 +43,50 @@
     }
 }
 
+.client-activity {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    width: 550px;
+    padding-left: 10px;
+    font-size: 13px;
+
+    :last-child {
+        color: rgb(228, 221, 208);
+        font-size: 14px;
+    }
+
+    p {
+        margin: 0;
+        line-height: 20px;
+
+        :first-child {
+            text-decoration: none;
+            color: rgb(168, 168, 167);
+        }
+    }
+}
+
 .client-status {
     width: 200px;
     text-align: center;
-    background-color: rgb(160, 160, 138);
+    background-color: rgba(158, 158, 156, 1);
+    color: rgb(228, 221, 208);
     border-radius: 20px;
     line-height: 20px;
     font-size: 12px;
 }
 
 .client-image {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
     position: absolute;
     right: 10px;
     top: 40%;
 }
 
-.grey {
+.activity-detail {
+    width: 200px;
+    padding-bottom: 20px;
     color: rgb(168, 168, 167);
 }
